# BioSensor-Architect

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/: README.md
data/example_constructs/: nitrogen_reporter.json
examples/: drought_sensor_arabidopsis.html  nitrogen_sensor_tomato.html  potassium_sensor_arabidopsis.html
inspiration/: tomato_K_reporter_construct_v2.html
mcp_servers/: README.md
mcp_servers/parts_db_server/: server.py
mcp_servers/parts_db_server/data/: parts_catalog.json  pathways.json
mcp_servers/pubmed_server/: server.py
mcp_servers/sequence_server/: server.py
notebooks/: demo_workflow.ipynb
prompts/: gemini_deep_research_parts_expansion.md
scripts/: batch_ingest_gemini_parts.py
src/biosensor_architect/: cli.py  config.py  models.py
src/biosensor_architect/agents/: base.py  characterization_planner.py  construct_designer.py  documenter.py  literature_validator.py  orchestrator.py  pathway_analyst.py
src/biosensor_architect/orchestration/: critic.py  design_verifier.py  report_qc.py  state.py  (+1 more)
tests/: conftest.py
tests/test_agents/: test_anthropic_client.py  test_construct_designer.py  test_pathway_analyst.py
tests/test_mcp_servers/: test_parts_db_server.py  test_sequence_server.py
tests/test_orchestration/: test_critic.py  test_design_verifier.py  test_report_qc.py
tests/test_rag/: test_indexer.py  test_retriever.py
tests/test_tools/: test_paper_ingest.py  test_pathway_db.py  test_pubmed_search.py
(+6 files in other folders)
